--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "github-markdown-css": "^5.2.0",
     "gray-matter": "^4.0.3",
     "micromark": "^3.1.0",
     "next": "13.3.1",
